--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react_ujs": "^2.6.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react_ujs": "^2.6.1",
     "redux": "^4.1.2",
     "redux-devtools": "^3.7.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
